--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,12 @@
+/*
+Google font
+*/
+
 @import "https://fonts.googleapis.com/css?family=Lato:400,700";
+
+/*
+General rules
+*/
 
 * {
   margin: 0;
@@ -22,6 +30,16 @@ li {
 a {
   color: #000;
   text-decoration: none;
+}
+
+iframe {
+  width: 560px;
+  height: 315px;
+  border: 0;
+}
+
+.emptyheader {
+  display: none;
 }
 
 /** global classes styling **/
@@ -52,31 +70,20 @@ header {
   position: fixed;
   top: 0;
   min-height: 75px;
-  padding: 0px 20px;
+  padding: 0 20px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: #eee;
 }
 
-@media (max-width: 600px) {
-  header {
-    flex-wrap: wrap;
-  }
-}
-
 .logo {
   width: 50vw;
-
 }
 
-@media (max-width: 650px) {
-  .logo {
-    margin-top: 15px;
-    width: 100%;
-    height:10%;
-    position: relative;
-  }
+.coffeenav {
+  border: 0;
+  height: 5vw;
 }
 
 .logo > img {
@@ -90,29 +97,8 @@ header {
   margin-left: 20px;
 }
 
-@media (max-width: 650px) {
-  .logo > img {
-    margin: 0 auto;
-  }
-}
-
 nav {
   font-weight: 400;
-}
-
-@media (max-width: 650px) {
-  nav {
-    margin-top: 10px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 0 50px;
-  }
-  nav li {
-    padding-bottom: 5px;
-  }
 }
 
 nav > ul {
@@ -122,112 +108,27 @@ nav > ul {
   justify-content: space-around;
 }
 
-@media (max-width: 650px) {
-  nav > ul {
-    flex-direction: column;
-  }
-}
-
-#hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 200px;
-  margin-top: 50px;
-}
-
-#hero > h2 {
-  margin-bottom: 20px;
-  word-wrap: break-word;
-}
-
-#hero input[type="email"] {
-  max-width: 275px;
-  width: 100%;
-  padding: 5px;
-}
-
-#hero input[type="submit"] {
-  max-width: 150px;
-  width: 100%;
-  height: 30px;
-  margin: 15px 0;
-  border: 0;
-  background-color: #f1c40f;
-}
-
-#hero input[type="submit"]:hover {
-  background-color: orange;
-  transition: background-color 1s;
-}
-
-@media (max-width: 650px) {
-  #hero {
-    margin-top: 120px;
-  }
-}
-
-#features {
+footer {
   margin-top: 30px;
+  background-color: #ddd;
+  padding: 20px;
 }
 
-#features .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 125px;
-  width: 20vw;
-  color: darkorange;
-}
-
-@media (max-width: 550px) {
-  #features .icon {
-    display: none;
-  }
-}
-
-#features .desc {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 125px;
-  width: 80vw;
-  padding: 5px;
-}
-
-@media (max-width: 550px) {
-  #features .desc {
-    width: 100%;
-    text-align: center;
-    padding: 0;
-    height: 150px;
-  }
-}
-
-@media (max-width: 650px) {
-  #features {
-    margin-top: 0;
-  }
-}
-
-#how-it-works {
-  margin-top: 50px;
+footer > ul {
   display: flex;
   justify-content: center;
 }
 
-#how-it-works > iframe {
-  max-width: 560px;
-  width: 100%;
+footer > ul > li {
+  padding: 0 10px;
 }
 
-#pricing {
-  margin-top: 60px;
+footer > span {
+  margin-top: 5px;
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  font-size: 0.9em;
+  color: #444;
 }
 
 .product {
@@ -235,7 +136,7 @@ nav > ul {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: calc(100%  / 3);
+  width: calc(100% / 3);
   margin: 10px;
   border: 1px solid #000;
   border-radius: 3px;
@@ -274,10 +175,90 @@ nav > ul {
   transition: background-color 1s;
 }
 
+#hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 200px;
+  margin-top: 50px;
+}
+
+#hero > h2 {
+  margin-bottom: 20px;
+  word-wrap: break-word;
+}
+
+#hero input[type="email"] {
+  max-width: 275px;
+  width: 100%;
+  padding: 5px;
+}
+
+#hero input[type="submit"] {
+  max-width: 150px;
+  width: 100%;
+  height: 30px;
+  margin: 15px 0;
+  border: 0;
+  background-color: #f1c40f;
+}
+
+#hero input[type="submit"]:hover {
+  background-color: orange;
+  transition: background-color 1s;
+}
+
+#features {
+  margin-top: 30px;
+}
+
+#features .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 125px;
+  width: 20vw;
+  color: darkorange;
+}
+
+#features .desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 125px;
+  width: 80vw;
+  padding: 5px;
+}
+
+#how-it-works {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+#how-it-works > iframe {
+  max-width: 560px;
+  width: 100%;
+}
+
+#pricing {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+/*
+Media queries
+*/
+
 @media (max-width: 800px) {
   #pricing {
     flex-direction: column;
   }
+
   .product {
     max-width: 300px;
     width: 100%;
@@ -286,25 +267,60 @@ nav > ul {
   }
 }
 
-footer {
-  margin-top: 30px;
-  background-color: #ddd;
-  padding: 20px;
+@media (max-width: 650px) {
+  #features {
+    margin-top: 0;
+  }
+
+  #hero {
+    margin-top: 120px;
+  }
+
+  .logo {
+    margin-top: 15px;
+    width: 100%;
+    height: 10%;
+    position: relative;
+  }
+
+  .logo > img {
+    margin: 0 auto;
+  }
+
+  nav {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 50px;
+  }
+
+  nav li {
+    padding-bottom: 5px;
+  }
+
+  nav > ul {
+    flex-direction: column;
+  }
 }
 
-footer > ul {
-  display: flex;
-  justify-content: flex-end;
+@media (max-width: 600px) {
+  header {
+    flex-wrap: wrap;
+  }
 }
 
-footer > ul > li {
-  padding: 0 10px;
-}
+@media (max-width: 550px) {
+  #features .icon {
+    display: none;
+  }
 
-footer > span {
-  margin-top: 5px;
-  display: flex;
-  justify-content: flex-end;
-  font-size: 0.9em;
-  color: #444;
+  #features .desc {
+    width: 100%;
+    text-align: center;
+    padding: 0;
+    height: 150px;
+  }
 }
